This major update introduces the "Auto TPI" feature, allowing the thermostat to automatically learn and optimize its TPI coefficients (Indoor/Outdoor) over learning sessions or continuous learning.
Key Changes:
- **Core Logic**: Introduced AutoTpiManager to orchestrate the entire self-learning lifecycle, enabling continuous adaptation, regime change detection, and state persistence for TPI coefficients..
- **Algorithms**: Added support for EMA (Adaptive Alpha) and Weighted Average learning methods to smooth coefficient adjustments.
- **Refactor**: Refactored base_thermostat.py , introducing new "thermostat_tpi" class. All Vtherm using TPI regulation are now Thermostat_TPI instances.
- **Calibration**: Introduce service action "calibrate_capacity" to estimate adiabatic capacity using the 75th percentile of slopes and Kext compensation.
- **Integration**: Deeply integrated with `BaseThermostat` to intercept cycles and apply learned parameters to `PropAlgorithm` dynamically.
- **Configuration**: Enhanced Config Flow with dedicated Auto TPI steps (activation, method selection, manual capacity override).
- **Sensors**: Added `auto_tpi_learning_state` sensor to monitor learning state, confidence, and stability.
- **Documentation**: Added extensive developer documentation (`auto_tpi_internal_doc.md`) and user guides (FR/EN).
- **Tests**: Comprehensive test suite (`test_auto_tpi.py`) covering initialization, learning logic, and persistence.

--- a/custom_components/versatile_thermostat/manifest.json
+++ b/custom_components/versatile_thermostat/manifest.json
@@ -1,18 +1,25 @@
 {
   "domain": "versatile_thermostat",
   "name": "Versatile Thermostat",
+  "after_dependencies": [
+    "recorder"
+  ],
   "codeowners": [
     "@jmcollin78"
   ],
   "config_flow": true,
   "dependencies": [],
+  
   "documentation": "https://github.com/jmcollin78/versatile_thermostat",
   "homekit": {},
   "integration_type": "device",
   "iot_class": "calculated",
   "issue_tracker": "https://github.com/jmcollin78/versatile_thermostat/issues",
   "quality_scale": "silver",
-  "requirements": [],
+  "requirements": [
+    "numpy",
+    "scipy"
+  ],
   "ssdp": [],
   "version": "8.4.0",
   "zeroconf": []
