--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -6,3 +6,6 @@ pytest
 coverage
 pytest-asyncio
 pytest-homeassistant-custom-component
+# Remove this when incompatibility is resolved:
+aiodns==3.5.0
+pycares==4.11.0
