Update release for github actions

--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: "ubuntu-latest"
     name: Validate
     steps:
-      - uses: "actions/checkout@v3.5.2"
+      - uses: "actions/checkout@v4"
 
       - name: HACS validation
         uses: "hacs/action@main"
@@ -23,8 +23,8 @@ jobs:
     runs-on: "ubuntu-latest"
     name: Check style formatting
     steps:
-      - uses: "actions/checkout@v3.5.2"
-      - uses: "actions/setup-python@v4.6.0"
+      - uses: "actions/checkout@v4"
+      - uses: "actions/setup-python@v5"
         with:
           python-version: "3.13"
       - run: python3 -m pip install "black>=24.0,<25.0"
@@ -32,14 +32,14 @@ jobs:
 
   tests:
     # Tests don't run in Gitlab ci environment
-    if: 0
+    if: false
     runs-on: "ubuntu-latest"
     name: Run tests
     steps:
       - name: Check out code from GitHub
-        uses: "actions/checkout@v3.5.2"
+        uses: "actions/checkout@v4"
       - name: Setup Python
-        uses: "actions/setup-python@v4.6.0"
+        uses: "actions/setup-python@v5"
         with:
           python-version: "3.13"
       - name: Install requirements
