--- a/custom_components/versatile_thermostat/services.yaml
+++ b/custom_components/versatile_thermostat/services.yaml
@@ -316,6 +316,20 @@ auto_tpi_calibrate_capacity:
             example: true
             selector:
                 boolean:
+        capacity_safety_margin:
+            name: "Safety Margin for Capacity"
+            description: "Margin percentage to subtract from max capacity before saving (default 20%). Valid range 0-90%."
+            required: false
+            default: 20
+            advanced: false
+            example: 20
+            selector:
+                number:
+                    min: 0
+                    max: 90
+                    step: 1
+                    unit_of_measurement: "%"
+                    mode: slider
         min_power_threshold:
             name: Minimum Power Threshold
             description: Minimum power percentage to consider a cycle as saturated (default 95%). Lower values (e.g., 90%) will include more cycles but may be less accurate.
