--- a/custom_components/versatile_thermostat/services.yaml
+++ b/custom_components/versatile_thermostat/services.yaml
@@ -143,6 +143,10 @@ set_hvac_mode_sleep:
 lock:
     name: Lock
     description: "Locks the thermostat, preventing any changes to its configuration from UI or automations."
+    target:
+        entity:
+            integration: versatile_thermostat
+
     fields:
         code:
             name: Lock code
