--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           python-version: "3.13"
       - run: python3 -m pip install "black>=24.0,<25.0"
-      - run: black .
+      - run: black --check .
 
   tests:
     # Tests don't run in Gitlab ci environment
