--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,4 +31,4 @@ jobs:
         with:
           python-version: "3.13"
       - run: python3 -m pip install "black>=24.0,<25.0"
-      - run: black .
+      - run: black --check .
