[Auto-TPI] - some fixes and improvements (#1440)
* add handling of Farenheit.
- added Temperature Unit in main configuration ( default to Celsius )
- change default temperature limits depending of unit
- use of temperature unit in auto-tpi calculation

CONFIG_MINOR_VERSION increased to 2.

* fix missing translations for config_flow

* fix missing keys in strings.json

* fix hassfest test

* Use HA temperature unit instead of configuring it

fix: use internal state variables for TPI power calculation

* caps coefficient weighting to 50 cycles to keep responsiveness while learning is still running.

* remove duplicated key entry

* Remove cooling support in auto tpi

* fix min power default not prefilled in calibate capacity service

* Add a new margin parameter to calculate capacity ( default to 20% )
Now send the recommended capacity to config instead of max cap.

* calibrate_capacity service: make the reliability value more optimistic

* lock capacity margin between 0-30%
unchecked margin should allow to use 100% capacity

* Add description to heating_rate ( fix #1434 )

* fix translation

* Added recommendation table for heater_heating_time heater_cooling_time
close #1433

* add default values to heater_heating|cooling_time

* review fixes

---------

Co-authored-by: KipK <kipk@nomail.org>

--- a/custom_components/versatile_thermostat/services.yaml
+++ b/custom_components/versatile_thermostat/services.yaml
@@ -311,29 +311,25 @@ auto_tpi_calibrate_capacity:
             example: "2023-12-01"
             selector:
                 date:
-        hvac_mode:
-            name: HVAC Mode
-            description: Which mode to calibrate (heat or cool)
+        capacity_safety_margin:
+            name: "Safety Margin for Capacity"
+            description: "Margin percentage to subtract from max capacity before saving. Valid range 0-30%. Default is 20%."
             required: true
             advanced: false
-            example: "heat"
+            example: 20
+            default: 20
             selector:
-                select:
-                    options:
-                        - "heat"
-                        - "cool"
-        save_to_config:
-            name: Save to Config
-            description: Whether to apply the calculated capacity to the entity's configuration
-            required: true
-            advanced: false
-            example: true
-            selector:
-                boolean:
+                number:
+                    min: 0
+                    max: 30
+                    step: 1
+                    unit_of_measurement: "%"
+                    mode: slider
         min_power_threshold:
             name: Minimum Power Threshold
             description: Minimum power percentage to consider a cycle as saturated (default 95%). Lower values (e.g., 90%) will include more cycles but may be less accurate.
             required: true
+            default: 95
             advanced: true
             example: 95
             selector:
@@ -343,3 +339,11 @@ auto_tpi_calibrate_capacity:
                     step: 1
                     unit_of_measurement: "%"
                     mode: slider
+        save_to_config:
+            name: Save to Config
+            description: Whether to apply the calculated capacity to the entity's configuration
+            required: true
+            advanced: false
+            example: true
+            selector:
+                boolean:
