--- a/custom_components/versatile_thermostat/services.yaml
+++ b/custom_components/versatile_thermostat/services.yaml
@@ -284,6 +284,22 @@ set_auto_tpi_mode:
             default: true
             selector:
                 boolean:
+        allow_kint_boost_on_stagnation:
+            name: Allow Kint boost
+            description: Allow boosting Kint when temperature stagnates despite demand (default false)
+            required: true
+            advanced: false
+            default: false
+            selector:
+                boolean:
+        allow_kext_compensation_on_overshoot:
+            name: Allow Kext compensation
+            description: Allow adjusting Kext when temperature overshoots (default false)
+            required: true
+            advanced: false
+            default: false
+            selector:
+                boolean:
 
 
 auto_tpi_calibrate_capacity:
