Revert "fix [Feature Request] - Add expert option to deactivate the accumulated error division in case of error inversion (#1653)"
This reverts commit b77558d3291b527846575e2387b2f5accf94016a.

--- a/.devcontainer/configuration.yaml
+++ b/.devcontainer/configuration.yaml
@@ -39,6 +39,7 @@ versatile_thermostat:
         ki: 0.08
         k_ext: 0.0
         offset_max: 5
+        stabilization_threshold: 0.1
         accumulated_error_threshold: 50
     short_ema_params:
         max_alpha: 0.6
@@ -380,6 +381,7 @@ template:
             default_entity_id: switch.fake_inversed_switch
             name: A fake inversed switch
             state: "{{ is_state('input_boolean.fake_inversed_heater', 'on') }}"
+
 
 frontend:
     extra_module_url:
