Add central-boiler, underlyings and over_climate_valve technical documentation.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,7 +40,8 @@
                 "huizhou.githd",
                 "github.copilot",
                 "github.copilot-chat",
-                "openai.chatgpt"
+                "openai.chatgpt",
+                "bierner.markdown-mermaid"
             ],
             "settings": {
                 "files.eol": "\n",
